script/notification/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/host: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: notification
            - name: POSTGRES_PASSWORD
              value: db_password
            - name: POSTGRES_USER
              value: root
          image: postgres:15.1
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgres
              name: v-database
      restartPolicy: Always
      volumes:
        - name: v-database
          persistentVolumeClaim:
            claimName: v-database
status: {}
